--- a/index.html
+++ b/index.html
@@ -18,22 +18,22 @@
             <nav>            
                 <ul id="primary-navigation" data-visible="false" class="primary-navigation flex">
                     <li>
-                        <a href="#">
+                        <a href="#offer-link">
                             <p>ABOUT</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#founder-link">
                             <p>PORTFOLIO</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#pricing-link">
                             <p>PRICING</p>
                         </a>
                     </li>
                     <li>
-                        <a href="#">
+                        <a href="#contact-link">
                             <p>CONTACT</p>
                         </a>
                     </li>
@@ -71,7 +71,7 @@
             </div>
 
             <hr></hr>
-            <div class="offer-section">
+            <div class="offer-section" id="offer-link">
                 <div class="left-side">
                     <h2>WHAT WE <br>OFFER</h2>
                 </div>
@@ -152,7 +152,7 @@
 
         <div class="founder-section">
             <div class="page-wrapper">
-                <div class="founder-text">
+                <div class="founder-text" id="founder-link">
                     <h2>MEET OUR<br>FOUNDERS</h2>
                     <div class="founder-rightside">
                         <p>
@@ -199,7 +199,7 @@
 
             <hr></hr>
 
-            <div class="pricing-section">
+            <div class="pricing-section" id="pricing-link">
                 <div class="pricing-text">
                     <h2>OUR FLAT<br>RATE</h2>
                     <p>
@@ -219,55 +219,215 @@
                         <td colspan="3"> <hr /> </td>      
                     </tr>
                     <tr>
-                        <td class="highlighted">Concepts</td>
-                        <td>80+</td>
-                        <td>Analysis of existing brand, Style Guide, Conceptual Design, Scheduling</td>
+                        <td class="highlighted">Grafikdesign</td>
+                        <td>3+</td>
+                        <td>Print & digital</td>
                     </tr>
                     <tr>
-                        <td class="highlighted">Social Media</td>
+                        <td class="highlighted">Kunstberatung</td>
+                        <td>8+</td>
+                        <td>Kunst am Bau, Standortmarketing</td>
+                    </tr>
+                    <tr>
+                        <td class="highlighted">F & B Beratung</td>
+                        <td>12+</td>
+                        <td>Lobbying, Networking, Krisen-PR</td>
+                    </tr>
+                    <tr>
+                        <td class="highlighted">PR Beratung</td>
+                        <td>16+</td>
+                        <td>Account-, Reichweiten- & Engagement-Analysen</td>
+                    </tr>
+                    <tr>
+                        <td class="highlighted">Social Media-Analyse</td>
+                        <td>24+</td>
+                        <td>Mailing, Monitoring & Reporting. </td>
+                    </tr>
+                    <tr>
+                        <td class="highlighted">Einladungsmanagment</td>
+                        <td>24+</td>
+                        <td>Community Research, Social Media-Analyse</td>
+                    </tr>
+                    <tr>
+                        <td class="highlighted">Zielgruppen-Analyse</td>
+                        <td>40+</td>
+                        <td>Setzung von Themenschwerpunkten. Ausarbeitung von Redaktionsplänen</td>
+                    </tr>
+                    <tr>
+                        <td class="highlighted">Konzeption</td>
+                        <td>90+</td>
+                        <td>Wir schaffen erlebbare Kommunikation</td>
+                    </tr>
+                    <tr>
+                        <td class="highlighted">Event Management</td>
                         <td>120+</td>
-                        <td>Design Manual, Template creation, Account creation, 4 campaigns, Scheduling, Implementation</td>
+                        <td>Strategischer Aufbau der Kommunikation für kurz-, mittel- & langfristige Ziele</td>
                     </tr>
                     <tr>
-                        <td class="highlighted">Strategy</td>
-                        <td>140+</td>
-                        <td>For short- / mid- / long-term Analysis of existing brand, Strategic Planning, Conceptual Design, Scheduling, Implementation,</td>
+                        <td class="highlighted">Strategie</td>
+                        <td>160+</td>
+                        <td>Neudefinition des Brands. Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
                     </tr>
                     <tr>
-                        <td class="highlighted">Communications</td>
-                        <td>200+</td>
-                        <td>Monitoring corporate communications, Lobbying & Networking, Public & Press Relations</td>
-                    </tr>
-                    <tr>
-                        <td class="highlighted">Brand Management</td>
+                        <td class="highlighted">Rebranding</td>
+                        <td>250+</td>
+                        <td>Brand Book, Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
+                    </tr><tr>
+                        <td class="highlighted">Brand Creation</td>
                         <td>300+</td>
-                        <td>Brand Book, Strategy + 4 campaigns, Social Media, Scheduling, Implementation</td>
+                        <td>Redaktionspläne für alle Accounts, Umsetzung, Monitoring & Reporting</td>
+                    </tr><tr>
+                        <td class="highlighted">Social Media-Betreuung</td>
+                        <td>25+ Std. / Monat+</td>
+                        <td>Redaktionspläne für alle Accounts, Umsetzung, Monitoring & Reporting</td>
+                    </tr><tr>
+                        <td class="highlighted">Brand Management</td>
+                        <td>35+ Std. / Monat+</td>
+                        <td>Alle obigen Leistungen ab einer Laufzeit von 1 Jahr</td>
                     </tr>
                 </table>
 
                 <!-- mobile -->
-                <div class="swiper mySwiper">
+                <div class="swiper pricingSwiper">
                     <div class="swiper-wrapper">
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <h3 class="casestudy-name unselectable">QT/eventstudio</h4>
-                                <h3 class="casestudy-slogan unselectable">#LifeIsQTful</h3>
-                                <p class="casestudy-action unselectable">Brand | Design</p>
-                                <button class="casestudy-bttn">View Case study -></button>
+                                <p>PROJECT TYPE</p>
+                                <p>Grafikdesign</p>
+                                <p>HOURS OF WORK</p>
+                                <p>3+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Print & digital</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <h3 class="casestudy-name unselectable">Siemens</h4>
-                                <button class="casestudy-bttn">View Case study -></button>
+                                <p>PROJECT TYPE</p>
+                                <p>Kunst-Beratung</p>
+                                <p>HOURS OF WORK</p>
+                                <p>8+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Kunst am Bau, Standortmarketing</td>
                             </div> 
                         </div>
                         <div class="swiper-slide">
                             <div class="slider-card">
-                                <h3 class="casestudy-name unselectable">Himmel Unter Berlin</h4>
-                                <h3 class="casestudy-slogan unselectable">Einladungsmanagment</h3>
-                                <p class="casestudy-action unselectable">Brand | Marketing Concept | Design</p>
-                                <button class="casestudy-bttn">View Case study -></button>
+                                <p>PROJECT TYPE</p>
+                                <p>F&B-Beratung</p>
+                                <p>HOURS OF WORK</p>
+                                <p>12+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Lobbying, Networking, Krisen-PR</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>PR-Beratung</p>
+                                <p>HOURS OF WORK</p>
+                                <p>16+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Lobbying, Networking, Krisen-PR</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Social Media-Analyse</p>
+                                <p>HOURS OF WORK</p>
+                                <p>24+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Account-, Reichweiten- & Engagement-Analysen</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Einladungsmanagement</p>
+                                <p>HOURS OF WORK</p>
+                                <p>24+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Mailing, Monitoring & Reporting. </td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Zielgruppen-Analyse</p>
+                                <p>HOURS OF WORK</p>
+                                <p>40+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Community Research, Social Media-Analyse</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Konzeption</p>
+                                <p>HOURS OF WORK</p>
+                                <p>90+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Setzung von Themenschwerpunkten. Ausarbeitung von Redaktionsplänen</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Event Management</p>
+                                <p>HOURS OF WORK</p>
+                                <p>120+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Wir schaffen erlebbare Kommunikation</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Strategie</p>
+                                <p>HOURS OF WORK</p>
+                                <p>160+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Strategischer Aufbau der Kommunikation für kurz-, mittel- & langfristige Ziele</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Rebranding</p>
+                                <p>HOURS OF WORK</p>
+                                <p>250+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Neudefinition des Brands. Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Brand Creation</p>
+                                <p>HOURS OF WORK</p>
+                                <p>300+</p>
+                                <p>DESCRIPTION</p>
+                                <td>Brand Book, Strategie & Konzepte von Kampagnen, Redaktionspläne</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Social Media-Betreuung</p>
+                                <p>HOURS OF WORK</p>
+                                <p>25+ Std. / Monat</p>
+                                <p>DESCRIPTION</p>
+                                <td>Redaktionspläne für alle Accounts, Umsetzung, Monitoring & Reporting</td>
+                            </div> 
+                        </div>
+                        <div class="swiper-slide">
+                            <div class="slider-card">
+                                <p>PROJECT TYPE</p>
+                                <p>Brand Management</p>
+                                <p>HOURS OF WORK</p>
+                                <p>35+ Std. / Monat</p>
+                                <p>DESCRIPTION</p>
+                                <td>Alle obigen Leistungen ab einer Laufzeit von 1 Jahr</td>
                             </div> 
                         </div>
                     </div>
@@ -293,7 +453,7 @@
                 </div>
             </div>
         </div>
-        <div class="last-section">
+        <div class="last-section" id="contact-link">
             <div class="page-wrapper">
                 <div class="cta-section">
                     <h1 id="cta-text">LET'S WORK TOGETHER!</h1>
